Add module declarations